<resources>
    <string name="app_name">Remote</string>
    <string name="txt_signup">Signup</string>
    <string name="txt_login">Login</string>
    <string name="etxt_hint_email">Enter your email address</string>
    <string name="etxt_hint_password">Enter a password</string>
    <string name="etxt_hint_pi_id">Enter Pi ID</string>
    <string name="btn_signup">SIGNUP</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_set_pi_id">REGISTER A PI ID</string>
    <string name="txt_signup_to_login">Already a user? Login Here</string>
    <string name="txt_login_to_signup">Not a Registered user? Signup Here</string>
    <string name="btn_logout">Logout</string>
</resources>
